k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: leaveweb
  labels:
    app: mongodb

spec:
  type: ClusterIP

  selector:
    app: mongodb

  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
      protocol: TCP
